# Stock_Picker-

./: README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml  secrets.toml.example
output/: decision.md  research_report.json  trending_companies.json
src/stock_picker/: crew.py  main.py
src/stock_picker/config/: agents.yaml  tasks.yaml
src/stock_picker/ui/: __init__.py  app.py
